# setup.cfg
[metadata]
name = dynamic_neural_textures
version = 0.1.0
author = Your Name
author_email = your_email@example.com
description = A PyTorch implementation of dynamic neural textures
url = https://github.com/Jac678/dynamic_neural_textures

[options]
packages = find:
install_requires =
    torch>=1.8.0
    torchvision
    numpy
    matplotlib
    opencv-python
    pybullet
    warp-lang
